--- a/eam/Src/Dashboard.fx.yaml
+++ b/eam/Src/Dashboard.fx.yaml
@@ -2,6 +2,30 @@ Dashboard As screen:
     BackgroundImage: ='milad-fakurian-GJKx5lhwU3M-unsplash (1)'
     ImagePosition: =ImagePosition.Fill
 
+    Icon6_6 As icon.ArrowsUpDown:
+        Height: =41
+        Icon: =Icon.Sort
+        Width: =44
+        X: =974
+        Y: =238
+        ZIndex: =1
+
+    Icon6_5 As icon.ArrowsUpDown:
+        Height: =41
+        Icon: =Icon.Sort
+        Width: =44
+        X: =750
+        Y: =232
+        ZIndex: =2
+
+    Icon6_3 As icon.ArrowsUpDown:
+        Height: =41
+        Icon: =Icon.Sort
+        Width: =44
+        X: =512
+        Y: =228
+        ZIndex: =3
+
     Gallery2 As gallery.galleryVertical:
         DelayItemLoading: =true
         Fill: =RGBA(255, 255, 255, 1)
@@ -11,13 +35,13 @@ Dashboard As screen:
         LoadingSpinner: =LoadingSpinner.Data
         TemplateSize: =If(Self.Layout = Layout.Horizontal, Min(280, Self.Width - 60), Min(280, Self.Height - 60))
         Width: =1366
-        ZIndex: =7
+        ZIndex: =8
 
     Image3 As image:
         Height: =111
         Image: ='photo_2024-02-05_12-17-19-transformed'
         Width: =194
-        ZIndex: =8
+        ZIndex: =9
 
     Label3 As label:
         Color: =RGBA(56, 96, 178, 1)
@@ -30,7 +54,7 @@ Dashboard As screen:
         Width: =826
         X: =228
         Y: =38
-        ZIndex: =9
+        ZIndex: =10
 
     Label4 As label:
         FontWeight: =FontWeight.Semibold
@@ -39,7 +63,7 @@ Dashboard As screen:
         Text: ="Powered by "
         Width: =100
         X: =1169
-        ZIndex: =10
+        ZIndex: =11
 
     Image3_1 As image:
         Height: =86
@@ -47,7 +71,7 @@ Dashboard As screen:
         Width: =97
         X: =1269
         Y: =25
-        ZIndex: =11
+        ZIndex: =12
 
     txt_SearchLargeData As text:
         BorderColor: =RGBA(237, 237, 237, 1)
@@ -66,7 +90,7 @@ Dashboard As screen:
         Width: =414
         X: =14
         Y: =124
-        ZIndex: =12
+        ZIndex: =13
 
     Icon2 As icon.Search:
         Color: =RGBA(179, 179, 179, 1)
@@ -76,7 +100,7 @@ Dashboard As screen:
         Width: =38
         X: =381
         Y: =133
-        ZIndex: =13
+        ZIndex: =14
 
     TextInput1_1 As text:
         BorderColor: =RGBA(237, 237, 237, 1)
@@ -91,7 +115,7 @@ Dashboard As screen:
         Width: =211
         X: =449
         Y: =124
-        ZIndex: =14
+        ZIndex: =15
 
     TextInput1_2 As text:
         BorderColor: =RGBA(237, 237, 237, 1)
@@ -106,7 +130,7 @@ Dashboard As screen:
         Width: =211
         X: =682
         Y: =124
-        ZIndex: =15
+        ZIndex: =16
 
     TextInput1_3 As text:
         BorderColor: =RGBA(237, 237, 237, 1)
@@ -121,7 +145,7 @@ Dashboard As screen:
         Width: =211
         X: =915
         Y: =124
-        ZIndex: =16
+        ZIndex: =17
 
     Button1 As button:
         Height: =57
@@ -132,7 +156,7 @@ Dashboard As screen:
         Width: =211
         X: =1142
         Y: =124
-        ZIndex: =17
+        ZIndex: =18
 
     RecordGallery As gallery.galleryVertical:
         DelayItemLoading: =true
@@ -143,7 +167,7 @@ Dashboard As screen:
         TemplateSize: =110
         Width: =1366
         Y: =264
-        ZIndex: =18
+        ZIndex: =19
 
         Label6 As label:
             OnSelect: =Select(Parent)
@@ -270,7 +294,7 @@ Dashboard As screen:
             TemplateSize: =62
             Width: =1366
             Y: =215
-            ZIndex: =1
+            ZIndex: =4
 
             Label5 As label:
                 Height: =7
@@ -302,7 +326,7 @@ Dashboard As screen:
             Width: =147
             X: =842
             Y: =232
-            ZIndex: =4
+            ZIndex: =5
 
         Label21 As label:
             FontWeight: =FontWeight.Bold
@@ -312,7 +336,7 @@ Dashboard As screen:
             Width: =123
             X: =648
             Y: =231
-            ZIndex: =5
+            ZIndex: =6
 
         Label20 As label:
             FontWeight: =FontWeight.Bold
@@ -322,7 +346,7 @@ Dashboard As screen:
             Width: =71
             X: =444
             Y: =231
-            ZIndex: =6
+            ZIndex: =7
 
         Label10 As label:
             FontWeight: =FontWeight.Bold
@@ -332,7 +356,7 @@ Dashboard As screen:
             Width: =73
             X: =34
             Y: =231
-            ZIndex: =32
+            ZIndex: =33
 
         Label17 As label:
             FontWeight: =FontWeight.Bold
@@ -342,7 +366,7 @@ Dashboard As screen:
             Width: =70
             X: =151
             Y: =231
-            ZIndex: =33
+            ZIndex: =34
 
         Label18 As label:
             FontWeight: =FontWeight.Bold
@@ -352,7 +376,7 @@ Dashboard As screen:
             Width: =97
             X: =272
             Y: =236
-            ZIndex: =34
+            ZIndex: =35
 
         Label24 As label:
             FontWeight: =FontWeight.Bold
@@ -362,7 +386,7 @@ Dashboard As screen:
             Width: =55
             X: =1033
             Y: =222
-            ZIndex: =35
+            ZIndex: =36
 
         Label25 As label:
             FontWeight: =FontWeight.Bold
@@ -371,7 +395,39 @@ Dashboard As screen:
             Width: =137
             X: =1198
             Y: =226
-            ZIndex: =36
+            ZIndex: =37
+
+    Icon6 As icon.ArrowsUpDown:
+        Height: =41
+        Icon: =Icon.Sort
+        Width: =44
+        X: =95
+        Y: =237
+        ZIndex: =39
+
+    Icon6_1 As icon.ArrowsUpDown:
+        Height: =41
+        Icon: =Icon.Sort
+        Width: =44
+        X: =211
+        Y: =234
+        ZIndex: =40
+
+    Icon6_2 As icon.ArrowsUpDown:
+        Height: =41
+        Icon: =Icon.Sort
+        Width: =44
+        X: =358
+        Y: =228
+        ZIndex: =41
+
+    Icon6_7 As icon.ArrowsUpDown:
+        Height: =41
+        Icon: =Icon.Sort
+        Width: =44
+        X: =1071
+        Y: =225
+        ZIndex: =42
 
     Thankyoupopup As group:
         Height: =5
@@ -387,7 +443,7 @@ Dashboard As screen:
             Width: =561
             X: =419
             Y: =295
-            ZIndex: =19
+            ZIndex: =20
 
         Label15 As label:
             Align: =Align.Center
@@ -401,7 +457,7 @@ Dashboard As screen:
             Width: =561
             X: =419
             Y: =295
-            ZIndex: =20
+            ZIndex: =21
 
         Label19 As label:
             Align: =Align.Center
@@ -413,7 +469,7 @@ Dashboard As screen:
             Width: =552
             X: =412
             Y: =561
-            ZIndex: =21
+            ZIndex: =22
 
         Icon3 As icon.Cancel:
             Color: =RGBA(255, 255, 255, 1)
@@ -422,7 +478,7 @@ Dashboard As screen:
             Width: =50
             X: =930
             Y: =295
-            ZIndex: =22
+            ZIndex: =23
 
         HtmlText3 As htmlViewer:
             Height: =473
@@ -432,7 +488,7 @@ Dashboard As screen:
             Width: =585
             X: =395
             Y: =295
-            ZIndex: =23
+            ZIndex: =24
 
         Icon4 As icon.Heart:
             Color: =RGBA(219, 219, 219, 1)
@@ -442,7 +498,7 @@ Dashboard As screen:
             Width: =134
             X: =622
             Y: =439
-            ZIndex: =24
+            ZIndex: =25
 
         Timer3 As timer:
             AutoPause: =false
@@ -453,7 +509,7 @@ Dashboard As screen:
             Visible: =false
             X: =609
             Y: =675
-            ZIndex: =41
+            ZIndex: =38
 
     Registrationform As group:
         Height: =5
@@ -474,7 +530,7 @@ Dashboard As screen:
             Width: =527
             X: =462
             Y: =181
-            ZIndex: =25
+            ZIndex: =26
 
         Rectangle2 As rectangle:
             Fill: =RGBA(255, 255, 255, 1)
@@ -486,7 +542,7 @@ Dashboard As screen:
             Width: =527
             X: =462
             Y: =181
-            ZIndex: =26
+            ZIndex: =27
 
         Form1 As form:
             DataSource: ='Event Attendees Management'
@@ -498,7 +554,7 @@ Dashboard As screen:
             Width: =521
             X: =468
             Y: =244
-            ZIndex: =27
+            ZIndex: =28
 
             "'First Name_DataCard1' As typedDataCard.textualEditCard":
                 BorderStyle: =BorderStyle.Solid
@@ -1048,7 +1104,7 @@ Dashboard As screen:
                 
             X: =657
             Y: =728
-            ZIndex: =28
+            ZIndex: =29
 
         Rectangle5 As rectangle:
             Height: =82
@@ -1059,7 +1115,7 @@ Dashboard As screen:
             Width: =523
             X: =462
             Y: =133
-            ZIndex: =29
+            ZIndex: =30
 
         Label22 As label:
             Align: =Align.Center
@@ -1076,7 +1132,7 @@ Dashboard As screen:
             Width: =519
             X: =462
             Y: =143
-            ZIndex: =30
+            ZIndex: =31
 
         Icon1 As icon.Cancel:
             Color: =RGBA(255, 255, 255, 1)
@@ -1090,5 +1146,5 @@ Dashboard As screen:
                 
             X: =921
             Y: =139
-            ZIndex: =31
+            ZIndex: =32
 
