--- a/eam/Src/Dashboard.fx.yaml
+++ b/eam/Src/Dashboard.fx.yaml
@@ -398,35 +398,35 @@ Dashboard As screen:
             ZIndex: =37
 
     Icon6 As icon.ArrowsUpDown:
-        Height: =41
+        Height: =40
         Icon: =Icon.Sort
-        Width: =44
-        X: =95
-        Y: =237
+        Width: =32
+        X: =107
+        Y: =233
         ZIndex: =39
 
     Icon6_1 As icon.ArrowsUpDown:
-        Height: =41
+        Height: =40
         Icon: =Icon.Sort
-        Width: =44
-        X: =211
-        Y: =234
+        Width: =32
+        X: =221
+        Y: =238
         ZIndex: =40
 
     Icon6_2 As icon.ArrowsUpDown:
-        Height: =41
+        Height: =40
         Icon: =Icon.Sort
-        Width: =44
-        X: =358
-        Y: =228
+        Width: =32
+        X: =361
+        Y: =233
         ZIndex: =41
 
     Icon6_7 As icon.ArrowsUpDown:
-        Height: =41
+        Height: =40
         Icon: =Icon.Sort
-        Width: =44
-        X: =1071
-        Y: =225
+        Width: =32
+        X: =502
+        Y: =226
         ZIndex: =42
 
     Thankyoupopup As group:
@@ -510,6 +510,14 @@ Dashboard As screen:
             X: =609
             Y: =675
             ZIndex: =38
+
+    Icon6_8 As icon.ArrowsUpDown:
+        Height: =40
+        Icon: =Icon.Sort
+        Width: =32
+        X: =756
+        Y: =231
+        ZIndex: =43
 
     Registrationform As group:
         Height: =5
@@ -1147,4 +1155,20 @@ Dashboard As screen:
             X: =921
             Y: =139
             ZIndex: =32
+
+    Icon6_9 As icon.ArrowsUpDown:
+        Height: =40
+        Icon: =Icon.Sort
+        Width: =32
+        X: =980
+        Y: =226
+        ZIndex: =44
+
+    Icon6_10 As icon.ArrowsUpDown:
+        Height: =40
+        Icon: =Icon.Sort
+        Width: =32
+        X: =1082
+        Y: =229
+        ZIndex: =45
 
