--- a/eam/Src/Dashboard.fx.yaml
+++ b/eam/Src/Dashboard.fx.yaml
@@ -392,6 +392,14 @@ Dashboard As screen:
     Icon6 As icon.ArrowsUpDown:
         Height: =40
         Icon: =Icon.Sort
+        OnSelect: |-
+            =UpdateContext(
+            {
+                SortColumPref: "First name",
+                SortColumnName: "name",
+                SortColumnType: !SortColumnFirstName
+            }
+            )
         Width: =32
         X: =107
         Y: =233
