--- a/eam/Src/Dashboard.fx.yaml
+++ b/eam/Src/Dashboard.fx.yaml
@@ -160,7 +160,8 @@ Dashboard As screen:
     RecordGallery As gallery.galleryVertical:
         DelayItemLoading: =true
         Height: =504
-        Items: =Filter('Event Attendees Management',StartsWith('First name', txt_SearchLargeData.Text))
+        Items: |
+            =Filter('Event Attendees Management',StartsWith('First name', txt_SearchLargeData.Text))
         Layout: =Layout.Vertical
         LoadingSpinner: =LoadingSpinner.Data
         TemplateSize: =110
@@ -177,14 +178,14 @@ Dashboard As screen:
 
         Label7 As label:
             OnSelect: =Select(Parent)
-            Text: =ThisItem.'First name'
+            Text: =ThisItem.ID
             X: =26
             Y: =26
             ZIndex: =2
 
         Label8 As label:
             OnSelect: =Select(Parent)
-            Text: =ThisItem.'Last name'
+            Text: =ThisItem.'First name'
             X: =159
             Y: =24
             ZIndex: =3
@@ -192,7 +193,7 @@ Dashboard As screen:
         Label9 As label:
             Height: =44
             OnSelect: =Select(Parent)
-            Text: =ThisItem.'Email '
+            Text: =ThisItem.'Last name'
             Width: =196
             X: =439
             Y: =24
@@ -201,7 +202,7 @@ Dashboard As screen:
         Label11 As label:
             Height: =44
             OnSelect: =Select(Parent)
-            Text: =ThisItem.Profession.Value
+            Text: =ThisItem.'Email '
             Width: =107
             X: =665
             Y: =24
@@ -209,7 +210,7 @@ Dashboard As screen:
 
         Label12 As label:
             OnSelect: =Select(Parent)
-            Text: =ThisItem.Organization
+            Text: =ThisItem.'Contact Number'
             X: =847
             Y: =28
             ZIndex: =6
@@ -217,7 +218,7 @@ Dashboard As screen:
         Label13 As label:
             Height: =95
             OnSelect: =Select(Parent)
-            Text: =ThisItem.'Job title'
+            Text: =ThisItem.Profession.Value
             Width: =138
             X: =1026
             ZIndex: =7
@@ -225,7 +226,7 @@ Dashboard As screen:
         Label14 As label:
             Height: =44
             OnSelect: =Select(Parent)
-            Text: =ThisItem.'Contact Number'
+            Text: =ThisItem.Organization
             X: =267
             Y: =24
             ZIndex: =8
