--- a/eam/Src/Dashboard.fx.yaml
+++ b/eam/Src/Dashboard.fx.yaml
@@ -16,23 +16,21 @@ Dashboard As screen:
     Image3 As image:
         Height: =111
         Image: ='photo_2024-02-05_12-17-19-transformed'
-        Width: =194
+        Width: =135
         ZIndex: =8
 
     Label3 As label:
         Color: =RGBA(56, 96, 178, 1)
-        FontWeight: =FontWeight.Lighter
-        Height: =35
-        Size: =26
+        FontWeight: =FontWeight.Semibold
+        Height: =41
+        Size: =23
         Text: ="Global Power Platform Bootcamp 2024 Ahmedabad"
-        Underline: =true
-        Width: =826
-        X: =228
+        Width: =851
+        X: =291
         Y: =38
         ZIndex: =9
 
     Label4 As label:
-        FontWeight: =FontWeight.Semibold
         Height: =111
         Size: =15
         Text: ="Powered by "
@@ -252,9 +250,9 @@ Dashboard As screen:
         Label26 As label:
             OnSelect: =Select(Parent)
             Text: =ThisItem.'Job title'
-            Width: =177
-            X: =981
-            Y: =32
+            Width: =115
+            X: =1025
+            Y: =20
             ZIndex: =13
 
     HeaderGroup As group:
@@ -376,6 +374,14 @@ Dashboard As screen:
             X: =1198
             Y: =226
             ZIndex: =36
+
+    Image6 As image:
+        Height: =86
+        Image: ='WhatsApp_Image_2024-01-30_at_17.51.49_69b23ba8-removebg-preview'
+        Width: =96
+        X: =196
+        Y: =12
+        ZIndex: =38
 
     Thankyoupopup As group:
         Height: =5
