--- a/eam/Src/Dashboard.fx.yaml
+++ b/eam/Src/Dashboard.fx.yaml
@@ -20,7 +20,7 @@ Dashboard As screen:
         ZIndex: =8
 
     Label3 As label:
-        Color: =RGBA(56, 96, 178, 1)
+        Color: =RGBA(167, 99, 168, 1)
         FontWeight: =FontWeight.Semibold
         Height: =41
         Size: =23
@@ -121,6 +121,7 @@ Dashboard As screen:
         ZIndex: =16
 
     Button1 As button:
+        Fill: =RGBA(115, 149, 222, 1)
         Height: =57
         OnSelect: |-
             =NewForm(Form1);
@@ -172,7 +173,7 @@ Dashboard As screen:
             Height: =32
             OnSelect: =Select(Parent)
             Text: =ThisItem.'Email '
-            Width: =171
+            Width: =212
             X: =417
             Y: =40
             ZIndex: =5
@@ -189,8 +190,8 @@ Dashboard As screen:
             OnSelect: =Select(Parent)
             Text: =ThisItem.Profession.Value
             Width: =138
-            X: =632
-            Y: =2
+            X: =641
+            Y: =8
             ZIndex: =7
 
         Label14 As label:
