--- a/eam/Src/Dashboard.fx.yaml
+++ b/eam/Src/Dashboard.fx.yaml
@@ -384,6 +384,12 @@ Dashboard As screen:
         Y: =12
         ZIndex: =38
 
+    Image7 As image:
+        Image: =hand
+        X: =643
+        Y: =481
+        ZIndex: =39
+
     Thankyoupopup As group:
         Height: =5
         Width: =5
@@ -403,7 +409,7 @@ Dashboard As screen:
         Label15 As label:
             Align: =Align.Center
             Color: =RGBA(255, 255, 255, 1)
-            Fill: =RGBA(119, 123, 125, 1)
+            Fill: =RGBA(166, 154, 154, 1)
             FontWeight: =FontWeight.Bold
             Height: =64
             Size: =25
@@ -416,14 +422,13 @@ Dashboard As screen:
 
         Label19 As label:
             Align: =Align.Center
-            Font: =Font.Georgia
-            Height: =80
+            Height: =44
             Size: =25
             Text: ="Thank you for attendees event."
             Visible: =varThankyoupopup
-            Width: =552
-            X: =412
-            Y: =561
+            Width: =511
+            X: =438
+            Y: =606
             ZIndex: =21
 
         Icon3 As icon.Cancel:
@@ -436,24 +441,14 @@ Dashboard As screen:
             ZIndex: =22
 
         HtmlText3 As htmlViewer:
-            Height: =473
+            Height: =361
             HtmlText: |-
                 ="<div style='padding: 300px; font size: 25px; color: white; box-shadow:5px 5px 8px #999; clip-path: inset(0px -15px 0px -15px); position: relative; margin: 0 50px; background: linear-gradient(90dg, springgreen, #90EE90);'<center></center> </div>"
             Visible: =varThankyoupopup
             Width: =585
             X: =395
-            Y: =295
+            Y: =406
             ZIndex: =23
-
-        Icon4 As icon.Heart:
-            Color: =RGBA(219, 219, 219, 1)
-            Height: =122
-            Icon: =Icon.Heart
-            Visible: =varThankyoupopup
-            Width: =134
-            X: =622
-            Y: =439
-            ZIndex: =24
 
         Timer3 As timer:
             AutoPause: =false
