--- a/eam/Src/Dashboard.fx.yaml
+++ b/eam/Src/Dashboard.fx.yaml
@@ -1089,7 +1089,7 @@ Dashboard As screen:
             Color: =RGBA(255, 255, 255, 1)
             Icon: =Icon.Cancel
             OnSelect: |+
-                =
+                =Set(varCloseForm, true)
                 
             Visible: |+
                 =varRegistrationform
