--- a/eam/Src/Dashboard.fx.yaml
+++ b/eam/Src/Dashboard.fx.yaml
@@ -1092,7 +1092,7 @@ Dashboard As screen:
                 =Set(varCloseVarRegistrationForm, true)
                 
             Visible: |+
-                =varRegistrationform
+                =!varCloseVarRegistrationForm
                 
                 
             X: =921
