--- a/eam/Src/Dashboard.fx.yaml
+++ b/eam/Src/Dashboard.fx.yaml
@@ -454,6 +454,7 @@ Dashboard As screen:
             Fill: =RGBA(0, 0, 0, 0)
             Height: =32
             OnTimerEnd: =Navigate(Success,ScreenTransition.Fade)
+            Start: =varThankyoupopup
             Visible: =false
             Width: =163
             X: =616
