--- a/eam/Src/Dashboard.fx.yaml
+++ b/eam/Src/Dashboard.fx.yaml
@@ -1084,9 +1084,9 @@ Dashboard As screen:
         Icon1 As icon.Cancel:
             Color: =RGBA(255, 255, 255, 1)
             Icon: =Icon.Cancel
-            OnSelect: |
-                =//Set(varCloseVarRegistrationForm, true)
-                Navigate(Splash)
+            OnSelect: |+
+                =Set(varCloseVarRegistrationForm, true)
+                
             Visible: |+
                 =varRegistrationform
                 
