--- a/eam/Src/Dashboard.fx.yaml
+++ b/eam/Src/Dashboard.fx.yaml
@@ -229,14 +229,8 @@ Dashboard As screen:
             Icon: =Icon.Edit
             OnSelect: |
                 =//UpdateContext({ButtonPressed: true});
-                Set(
-                    varRegistrationform,
-                    true
-                );
-                Set(
-                    selectedItem,
-                    ThisItem
-                );
+                //Set(varRegistrationform,true);Set(selectedItem,ThisItem);
+                Set(SelectedRecord, RecordGallery.Selected); UpdateContext({ ShowEditFormOverlay: true })
             Width: =30
             X: =1238
             Y: =24
