--- a/eam/Src/Dashboard.fx.yaml
+++ b/eam/Src/Dashboard.fx.yaml
@@ -243,7 +243,8 @@ Dashboard As screen:
             Icon: =Icon.View
             OnSelect: |+
                 =//UpdateContext({ButtonPressed: true});
-                UpdateContext({varRegistrationform:true});
+                //UpdateContext({varRegistrationform:true});
+                Set(varThankyoupopup,false);
                 Set(varRegistrationform,true);Set(selectedItem,ThisItem);
                 //Set(SelectedRecord, RecordGallery.Selected); 
                 
