--- a/eam/CanvasManifest.json
+++ b/eam/CanvasManifest.json
@@ -5,7 +5,7 @@
       "DataflowAnalysisEnabled": false,
       "DataflowAnalysisFlagStateToggledByUser": false
     },
-    "DocVersion": "1.336",
+    "DocVersion": "1.337",
     "MinVersionToLoad": "1.331",
     "MSAppStructureVersion": "2.0"
   },
@@ -115,7 +115,7 @@
     "FileID": "92b1d8ed-62ae-46b0-a1f4-7026bf99d52f",
     "Id": "cc7ebdc2-b601-46ea-bddc-797576526fa6",
     "InstrumentationKey": "",
-    "LocalDatabaseReferences": "{}",
+    "LocalDatabaseReferences": "",
     "ManualOfflineProfileId": "",
     "Name": "Event Attendees Management App",
     "OriginatingVersion": "1.336",
